better fullscreen (working) + fix settings icon overflow

--- a/app/app.css
+++ b/app/app.css
@@ -179,15 +179,23 @@ a.home-page {
 }
 
 .settings-fixed {
-	position: absolute;
-	top: 16px;
-	right: 16px;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
 	z-index: 15;
 	transition: right .3s;
+	pointer-events: none;
 
 	.icon {
 		transition: rotate .3s;
 		cursor: pointer;
+		position: absolute;
+		right: 16px;
+		top: 16px;
+		pointer-events: all;
+
 	}
 
 	.icon:hover {
@@ -233,6 +241,10 @@ a.home-page {
 		&:hover {
 			rotate: 180deg;
 		}
+	}
+
+	.icon.nav-hide {
+		
 	}
 
 }
